objects/Zoho_Ticket2__c.object
<CustomObject>
    <fields>
        <fullName>Account_Id__c</fullName>
        <label>Account Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Time__c</fullName>
        <label>Closed Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact_Id__c</fullName>
        <label>Contact Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Time__c</fullName>
        <label>Created Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Department_Id__c</fullName>
        <label>Department Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Type__c</fullName>
        <label>Status Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_URL__c</fullName>
        <label>Web URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zoho_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Zoho Id</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Zoho Ticket</label>
    <nameField>
        <label>Zoho Ticket Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zoho Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>